--- a/html/seattle_downtown.html
+++ b/html/seattle_downtown.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="es-ES">
     <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css/index">
         <title>Seattle Downtown image</title>
-        <style>
-            body {background-color: rgb(190, 218, 165)}
-        </style>
     </head>
 
     <body>
