--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="es-ES">
     <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css/index">
         <title>MyPod</title>
-        <style>
-            body {background-color: rgb(190, 218, 165)}
-        </style>
     </head>
 
     <body>
@@ -36,6 +35,5 @@
         </p>
         <a href="html/britain.html"><img src="miniaturas/britain.jpg" alt="Se puede observar una imagen del iPod"></a>
         <a href="html/applestore.html"><img src="miniaturas/applestore.jpg" alt="Se puede observar una imagen del iPod"></a>
-
     </body>
 </html>
