--- a/html/britain.html
+++ b/html/britain.html
@@ -2,7 +2,7 @@
 <html lang="es-ES">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="../css/index.css">
         <title>Britain Image</title>
     </head>
 
